--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         </div> <!--heading -->
         <br>
         
-<div id="leftcolumn">
+<div class="container-fluid" id="maincontent">
 <h2> The Solar Swiftem </h2>
 <h3> Start your journey </h3>
 
 <div class="link-button-wrapper">
     <a href="installation.html">
-        <h1>Take Off!</h1>
+        <h6>Take Off!</h6>
     </a>
 </div>
 <!--<p>
@@ -102,7 +102,7 @@ We will be using the Object Oriented Language Swift in order to create the appli
 
 <p>
 Please click this link to find instructions on the software that you will need in order to start your adventure through the Solar Swiftem
-</p>-->
+</p>
 
 </div>
 <div id="bottomSection" style="text-align: center; align:center">
@@ -138,7 +138,7 @@ Please click this link to find instructions on the software that you will need i
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div> -->
+    </div>
     <!-- /#wrapper -->
 
     <!-- jQuery -->
