--- a/basics.html
+++ b/basics.html
@@ -24,6 +24,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+   
+
 </head>
 
 <body>
@@ -106,6 +108,11 @@
 
 </div>
 <div id="rightcolumn">
+    <div class="link-button-wrapper">
+    <a href="loops.html">
+        <h6>Next Planet!</h6>
+    </a>
+</div>
 
 </div>
 
@@ -153,6 +160,11 @@
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
+
+
+
+
+<br>
 
 </body>
 
