--- a/conditionals.html
+++ b/conditionals.html
@@ -111,8 +111,10 @@
 
 </div>
 <div id="rightcolumn">
-
-</div>
+    <div class="link-button-wrapper">
+    <a href="variables.html">
+        <h6>Next Planet!</h6>
+    </a>
 
 <div id="footing">
  Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
@@ -138,7 +140,7 @@
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div> -->
+    </div> 
     <!-- /#wrapper -->
 
     <!-- jQuery -->
