--- a/installation.html
+++ b/installation.html
@@ -90,7 +90,10 @@
 
 </div>
 <div id="rightcolumn">
-
+    <div class="link-button-wrapper">
+    <a href="basics.html">
+        <h6>Next Planet!</h6>
+    </a>
 </div>
 
 <div id="footing">
@@ -117,7 +120,7 @@
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div> -->
+    </div> 
     <!-- /#wrapper -->
 
     <!-- jQuery -->
