--- a/loops.html
+++ b/loops.html
@@ -153,9 +153,14 @@ f<p>or var i=0; i<3; i++	{ </p>
 
 
 </div>
-<div id="rightcolumn">
 
+<div id="rightcolumn">
+    <div class="link-button-wrapper">
+    <a href="conditionals.html">
+        <h6>Next Planet!</h6>
+    </a>
 </div>
+
 
 <div id="footing">
  Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
