--- a/variables.html
+++ b/variables.html
@@ -108,8 +108,10 @@
 
 </div>
 <div id="rightcolumn">
-
-</div>
+    <div class="link-button-wrapper">
+    <a href="functions.html">
+        <h6>Next Planet!</h6>
+    </a>
 
 <div id="footing">
  Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
@@ -135,7 +137,7 @@
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div> -->
+    </div> 
     <!-- /#wrapper -->
 
     <!-- jQuery -->
