--- a/functions.html
+++ b/functions.html
@@ -12,7 +12,7 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/basics.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
@@ -114,7 +114,7 @@
         <p1> Hello </p1>
         <!-- /#page-content-wrapper -->
 
-    </div> -->
+    </div> 
     <!-- /#wrapper -->
 
     <!-- jQuery -->
