--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -109,16 +110,13 @@ Please click this link to find instructions on the software that you will need i
 	<!--<img src="eg.jpg" alt="HTML tutorial" class="img-responsive" style="width:350px; height:300px; border:0;"> -->
 
 </div>
-<div id="rightcolumn">
-
-</div>
 
 
-<div id = "footing">
+<!--<div id = "footing">-->
 
 
 
- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
+<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
  <p1> </p1></div>
         <!-- /#sidebar-wrapper -->
@@ -142,6 +140,7 @@ Please click this link to find instructions on the software that you will need i
 
     </div>
     <!-- /#wrapper -->
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
