--- a/loops.html
+++ b/loops.html
@@ -162,8 +162,8 @@ f<p>or var i=0; i<3; i++	{ </p>
 </div>
 
 
-<div id="footing">
- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
+<!--<div class="footing"> -->
+ <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
  <p1> </p1></div>
