--- a/variables.html
+++ b/variables.html
@@ -113,8 +113,8 @@
         <h6>Next Planet!</h6>
     </a>
 
-<div id="footing">
- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
+<!--<div id="footing">-->
+<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
  <p1> </p1></div>
