--- a/about.html
+++ b/about.html
@@ -11,11 +11,12 @@
 
     <title>The Solar Swiftem</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/aboutUs.css" rel="stylesheet">
+     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="css/basics.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -100,8 +101,8 @@
 
 </div>
 
-<div id="footing">
- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
+<!--<div id="footing">-->
+<!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
 
  <p1> </p1></div>
