--- a/basics.html
+++ b/basics.html
@@ -12,10 +12,11 @@
     <title>The Solar Swiftem</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/basics.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="css/basics.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -83,7 +84,7 @@
     
 		
         
-<div id="centerDiv">
+<div id="centerDiv" class="jumbotron">
 <h3>Lesson 1:</h3>
 
 <h4>Objective:</h4>
@@ -116,8 +117,9 @@
 
 </div>
 
-<div id="footing">
- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  
+<!--div class="footing"> -->
+ <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
+
 
 
  <p1> </p1></div>
