--- a/loops.html
+++ b/loops.html
@@ -157,10 +157,15 @@ f<p>or var i=0; i<3; i++	{ </p>
 <div id="rightcolumn">
     <div class="link-button-wrapper">
     <a href="conditionals.html">
-        <h6>Next Planet!</h6>
+         <img src="link1.png">
     </a>
 </div>
 
+
+</div>
+<div id="moveOn">
+    <p>Carry on the journey</p>
+</div>
 
 <!--<div class="footing"> -->
  <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
