--- a/variables.html
+++ b/variables.html
@@ -110,8 +110,15 @@
 <div id="rightcolumn">
     <div class="link-button-wrapper">
     <a href="functions.html">
-        <h6>Next Planet!</h6>
+         <img src="link1.png">
     </a>
+</div>
+
+
+</div>
+<div id="moveOn">
+    <p>Carry on the journey</p>
+</div>
 
 <!--<div id="footing">-->
 <!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
