--- a/conditionals.html
+++ b/conditionals.html
@@ -113,8 +113,15 @@
 <div id="rightcolumn">
     <div class="link-button-wrapper">
     <a href="variables.html">
-        <h6>Next Planet!</h6>
+         <img src="link1.png">
     </a>
+</div>
+
+
+</div>
+<div id="moveOn">
+    <p>Carry on the journey</p>
+</div>
 
 
 
