--- a/conditionals.html
+++ b/conditionals.html
@@ -166,6 +166,9 @@
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
+		<a href="https://twitter.com/solarswiftem">
+		<img src="twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
+	</a>
 
 </body>
 
