--- a/loops.html
+++ b/loops.html
@@ -211,7 +211,9 @@ f<p>or var i=0; i<3; i++	{ </p>
     <a href="https://www.facebook.com/solarswiftem">
 		<img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
 	</a>
-
+	<a href="https://twitter.com/solarswiftem">
+		<img src="twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
+	</a>
 </body>
 
 </html>
