--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                     <a href="#">Planet Test Yourself</a>
                 </li>
                  <li>
+                    <a href="ios.html">Planet iOS</a>
+                </li>
+                 <li>
                     <a href="about.html">About Us</a>
                 </li>
                 
@@ -87,6 +90,7 @@
 <div class="container-fluid" id="maincontent">
 <h2> The Solar Swiftem </h2>
 <h3> Start your journey </h3>
+
 
 <div class="link-button-wrapper">
     <a href="installation.html">
