--- a/loops.html
+++ b/loops.html
@@ -60,6 +60,9 @@
                 <li>
                     <a href="#">Planet Test Yourself</a>
                 </li>
+                 <li>
+                    <a href="ios.html">Planet iOS</a>
+                </li>
                   <li>
                     <a href="about.html">About Us</a>
                 </li>
