Congrats page added.

--- a/endpage.html
+++ b/endpage.html
@@ -84,50 +84,16 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 8: A Whole App </h3>
- <p>
-It is finally time to put all of your knowledge together into one full app! You will be making an app from start to finish so get ready.</p>
-<h4>Goal:</h4>
-<p>In this lesson, you will create a fully working app from start to finish. This will require all the skills that you have learned in the previous lessons.</p>
-
-<h4>Demonstration:</h4>
-
-<p>Videos will be added after/during reading week</p>
- 
-<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
- 
-<h4>Exercises:</h4>
-<p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
- 
-<ul> 
-<li>Look at the example apps for this lesson. Some of them have different things missing. Can you figure out what is wrong with them and fix them?
-</li>
-<li>Make an app which tells somebody about yourself. The app should have different pages for different things about you. Try using tables and images to describe what you like.
-
-</li>
-
-</ul>
-
-<h4>Answers:</h4>
-<p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
- 
- 
+<h2>Congratulations!</h2>
+<p>You have completed your journey through The Solar Swiftem and are now a Swift expert!</p>
+<p>You may now return home to keep practicing your skills!</p> 
+<p>Don't forget there is always space in the Solar Swiftem for you to brush up on any forgotten knowledge :)</p> 
 
 
 
 </div>
-<div id="rightcolumn">
-    <div class="link-button-wrapper">
-    <a href="endpage.html">
-         <img src="link1.png">
-    </a>
-</div>
 
 
-</div>
-<div id="moveOn">
-    <p>Carry on the journey</p>
-</div>
 
 
 
