Lesson text edit.

--- a/advancedui.html
+++ b/advancedui.html
@@ -84,7 +84,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 7: Advanced UI Elements </h3>
+<h3 align="center">Lesson 7: Advanced UI Elements </h3>
  <p>You already have the skills to make pretty impressive apps now. There are still many other views that can be used to make your apps even more professional. They are a little trickier to use but they can make things a lot easier once you’ve mastered them.</p>
 <h4>Goal:</h4>
 <p>In this lesson, you will learn how to use table views. You will learn how to use delegation to make your app respond to taps on different cells in the table.
