--- a/autolayout.html
+++ b/autolayout.html
@@ -84,7 +84,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 4: Autolayout </h3>
+<h3 align="center">Lesson 4: Autolayout </h3>
  <p>So far we’ve been getting XCode to automatically layout our apps for us. Sometimes it doesn’t come out very nicely. You can use “autolayout” to tell the app how you want it to look. You can make it look good no matter which device it runs on.</p>
 <h4>Goal:</h4>
 <p>In this lesson, you will learn how to use autolayout to decide where you want the views in your app to be. You will learn to line up views and determine their sizes. Your apps still won’t do very much but they should look well made.</p>
