--- a/basics.html
+++ b/basics.html
@@ -88,7 +88,7 @@
 		
         
 <div id="centerDiv" class="jumbotron">
-<h3>Lesson 1:</h3>
+<h3 align="center">Lesson 1: Swift Basics</h3>
 
 <h4>Objective:</h4>
 <p>In this lesson you will learn how to print out your very first line of code! This is useful when you require the computer to output some data. You will also learn how to comment on your code which is helpful to you or anyone else reading the code to understand what is going on without having to read each line of code.</p>
