--- a/basicui.html
+++ b/basicui.html
@@ -84,7 +84,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 3: Basic UI Elements and properties </h3>
+<h3 align="center">Lesson 3: Basic UI Elements and properties </h3>
  <p>Apps can be designed by adding different objects to the view. These include things like images and buttons. They won’t be able to do anything yet in this lesson but you should be able to make your app look really good.
 </p>
 <h4>Goal:</h4>
