--- a/conditionals.html
+++ b/conditionals.html
@@ -85,7 +85,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 4:</h3>
+<h3 align="center">Lesson 4: Conditionals</h3>
  
 <h4>Objective:</h4>
 <p>In this lesson you will learn how to use ‘If statements’. If statements are useful for making certain blocks of code run only when the condition is met. While a simple mechanic, the many possible applications and therefore, it is beneficial that you fully understand them in order to be a better programmer.</p>
