--- a/importingimages.html
+++ b/importingimages.html
@@ -83,7 +83,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 2: Importing Images </h3>
+<h3 align="center">Lesson 2: Importing Images </h3>
  <p>You may have noticed that your app from the previous lesson had a white square for the icon. In order to make your apps look good you will need to add images. These may be used for the icon, as the background and almost anywhere you like.</p>
 <h4>Goal:</h4>
 <p>In this lesson, you will learn how to make an app icon of the right size for your apps. You will also learn how to add other images which can be used in other parts of the app.</p>
