--- a/loops.html
+++ b/loops.html
@@ -85,34 +85,37 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 2: For Loops</h3>
+<h3 align="center"><strong>Lesson 2: For Loops</strong></h3>
  
-<h4>Objective:</h4>
+<h4><strong>Objective:</strong></h4>
 <p>In this lesson you will learn about for loops. For loops are the most commonly used loop. In comparison to other loops, for loops explicitly make use of a counter to progress towards a termination point.
 </p>
 <p> For loops take the form: </p>
 
-<p>for initialization; condition; increment	{ </p>
+<code>for initialization; condition; increment	{ 
 
-<p>}</p>
+}</code>
 
 <p>Where initialization is where the counter is initially set, condition is the condition that is tested at the end of the block of code within the loop and increment is where the change to counter is stated.</p>
 
 <p>e.g.</p>
-f<p>or var i=0; i<3; i++	{ </p>
-	<p>// Code to run goes here </p>
-<p>}</p>
+<code class="codeblock">for var i=0; i<3; i++	{ </code>
+<br>
+	<code>// Code to run goes here </code>
+<br>
+<code>}</code>
 
 <p>In the above example, the counter i is set to 0 and the block of code within the loop will run. After the first time the code runs, i is incremented. </p> 
 
 
-<h4>Demonstration:</h4>
+<h4><strong>Demonstration:</strong></h4>
 
 <p>Videos will be added after/during reading week</p>
+
  
 <p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
  
-<h4>Exercises:</h4>
+<h4><strong>Exercises:</strong></h4>
 <p>(Aim to write 3-5 exercise questions of varying difficulty. Make sure they highlight the different types of tricks/challenges that your concept may possess.) </p>
  
 <ul> 
@@ -124,25 +127,25 @@ f<p>or var i=0; i<3; i++	{ </p>
 </li>
 </ul>
 
-<h4>Answers:</h4>
+<h4><strong>Answers:</strong></h4>
 <p>Attach source code files for programs that solve the exercise questions. Make sure they are well commented</p>
  
  
 
-<h3>Lesson 3: Repeat-while loops</h3>
+<h3 align="center"><strong>Lesson 3: Repeat-while loops</strong></h3>
 
-<h4>Objective:</h4>
+<h4><strong>Objective:</strong></h4>
 <p>In this lesson you will learn how to use repeat-while loops.  Repeat-while loops operate in a very similar manner to while loops. The main separator is that the block of code within the loop will execute at least once before the condition is tested to see if the loop will continue to run.
 </p>
 
 
-<h4>Demonstration:</h4>
+<h4><strong>Demonstration:</strong></h4>
 <p>Videos will be added after/during reading week</p>
 
 <p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
 
 
-<h4>Exercises:</h4>
+<h4><strong>Exercises:</strong></h4>
 <ul>
 <li>1.	Write a program that prints the integers 1 to 10 (on their own line)</li>
 <li>1.	Write a program that prints </li>
@@ -150,7 +153,7 @@ f<p>or var i=0; i<3; i++	{ </p>
 </li>
 </ul>
 
-<h4>Answers:</h4>
+<h4><strong>Answers:</strong></h4>
 <p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
 
 
