--- a/newproject.html
+++ b/newproject.html
@@ -84,7 +84,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 1: Starting a new project and running </h3>
+<h3 align="center">Lesson 1: Starting a new project and running </h3>
  <p>Making apps can sound hard but this lesson will show you how easy it is to start out with something basic. You will see how quick and easy it is to get an app onto a device.</p>
 <h4>Goal:</h4>
 <p>In this lesson, you will learn how to create a new project for an app. The app won’t be that fancy but you will learn how to run it on a simulator as well as on a real iPhone/iPad.</p>
