--- a/outlets.html
+++ b/outlets.html
@@ -82,7 +82,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 5: Outlets & Actions </h3>
+<h3 align="center">Lesson 5: Outlets & Actions </h3>
  <p>Now that you know how to make an app look like an app, it’s time to make it do something. You can add code to your app that can run when the user taps on a button.</p>
 <h4>Goal:</h4>
 <p>In this lesson, you will learn how to use outlets to change the views in the app when the app is running. You will also learn how to use actions to write code that runs when a button is tapped.
