--- a/segues.html
+++ b/segues.html
@@ -82,7 +82,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 6: Segues</h3>
+<h3 align="center">Lesson 6: Segues</h3>
  <p>Up to this point, all of your apps have been made using one single screen. However, you can have more than one screen in your app. At the tap of a button you can move the app from one screen to another.</p>
 <h4>Goal:</h4>
 <p>In this lesson, you will learn how to use segues to transition between different screens in your app.</p>
