--- a/variables.html
+++ b/variables.html
@@ -83,7 +83,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 5:</h3>
+<h3 align="center">Lesson 5: Variables</h3>
 
 <h4>Objective:</h4>
 <p>In this lesson you will learn how to use collection types such as arrays and dictionaries. These are useful for managing groups of the same data type.
