--- a/wholeapp.html
+++ b/wholeapp.html
@@ -84,7 +84,7 @@
 		
         
 <div id="centerDiv">
-<h3>Lesson 8: A Whole App </h3>
+<h3 align="center">Lesson 8: A Whole App </h3>
  <p>
 It is finally time to put all of your knowledge together into one full app! You will be making an app from start to finish so get ready.</p>
 <h4>Goal:</h4>
