--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>The Solar Swiftem</title>
-
+	<link rel="icon" href="rocket.png">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -92,43 +92,29 @@
 <h3> Start your journey </h3>
 
 
+
 <div class="link-button-wrapper">
     <a href="installation.html">
         <h6>Take Off!</h6>
+
     </a>
 </div>
-<!--<p>
-We feel that there are not enough tutorials out there that allow children to make their own applications for iPhone and iPad. Therefore, we have decided to make a series of tutorial videos which guide you through the steps needed to make an app which you can download straight onto your phone or tablet. We will start by taking you through a series of Planets teaching you the basic programming concepts, before showing you how you can put all of this knowledge together in order to make your app. 
-</p>
 
-<p>
-We will be using the Object Oriented Language Swift in order to create the applications as it is a great language to learn and use to make all sorts of apps.
-</p>
-
-<p>
-Please click this link to find instructions on the software that you will need in order to start your adventure through the Solar Swiftem
-</p>
-
-</div>
-<div id="bottomSection" style="text-align: center; align:center">
-	<!--<img src="eg.jpg" alt="HTML tutorial" class="img-responsive" style="width:350px; height:300px; border:0;"> -->
 
 </div>
 
 
 <!--<div id = "footing">-->
-
-
-
 <!-- Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
 
- <p1> </p1></div>
-        <!-- /#sidebar-wrapper -->
+
+	<!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-       <!-- <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div class="row">
+       <!-- <div id="page-content-wrapper"> -->
+          <!--  <div class="container-fluid"> -->
+                <!-- 
+<div class="row">
                     <div class="col-lg-12">
                         <h1>The Solar Swiftem</h1>
                         
@@ -140,25 +126,26 @@ Please click this link to find instructions on the software that you will need i
         </div>
         
         <p1> Hello </p1>
-        <!-- /#page-content-wrapper -->
+        <!~~ /#page-content-wrapper ~~>
 
     </div>
-    <!-- /#wrapper -->
+    <!~~ /#wrapper ~~>
 
 
-    <!-- jQuery -->
+   <!~~ jQuery ~~>
     <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
+    <!~~ Bootstrap Core JavaScript ~~>
     <script src="js/bootstrap.min.js"></script>
 
-    <!-- Menu Toggle Script -->
+    <!~~ Menu Toggle Script ~~>
     <script>
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
     });
     </script>
+ -->
 
 	<a href="https://www.facebook.com/solarswiftem">
 		<img src="facebook.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px;">
@@ -166,6 +153,8 @@ Please click this link to find instructions on the software that you will need i
 	<a href="https://twitter.com/solarswiftem">
 		<img src="twitter.png" alt="HTML tutorial" style="width:42px;height:42px;border:0; position:fixed; right:0px; align: right; top: 0px; right: 45px;">
 	</a>
+	
+
 
 </div>
 </body>
