--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>The Solar Swiftem</title>
-	<link rel="icon" href="rocket.png">
+	<link rel="icon" href="icon.png">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
