--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 
 <h3>The Team </h3>
 
-<p>We are a team of four members - Matt Policane, Nadia, Jay Jeyaruben and Nadia. We are all first year Computer Science students at University College London and are passionate about getting children to start coding from a younger age as it is more and more important these days. </p>
+<p>We are a team of four members - Matt Policane, Nadia Mahgerefteh, Jay Jeyaruben and Stars Momodu. We are all first year Computer Science students at University College London and are passionate about getting children to start coding from a younger age as it is more and more important these days. </p>
 
  </p>
 
