--- a/basics.html
+++ b/basics.html
@@ -46,7 +46,7 @@
                     <a href="installation.html">Planet Installation</a>
                 </li>
                <li>
-                    <a href="basics.html">Planet Basics</a>
+                    <a href="basics.html">Planet Printing</a>
                 </li>
                 <li>
                     <a href="loops.html">Planet Loops</a>
@@ -89,27 +89,29 @@
 		
         
 <div id="centerDiv" class="jumbotron">
-<h3 align="center">Lesson 1: Swift Basics</h3>
+<h3 align="center">Lesson 1: Printing</h3>
 
-<h4>Objective:</h4>
-<p>In this lesson you will learn how to print out your very first line of code! This is useful when you require the computer to output some data. You will also learn how to comment on your code which is helpful to you or anyone else reading the code to understand what is going on without having to read each line of code.</p>
+<p>In computer programming printing is used to display some text on the screen (nothing to do with printing paper). It will be useful in all the swift tutorials.</p>
 
-
-<h4>Demonstration:</h4>
-<p>Videos will be added after/during reading week</p>
-
-<p>The code file from the video should be attached. Write this before the video is recorded and use it to guide the video</p>
+<h4>Goal</h4>
+<p>In this lesson you will learn how to set up a new program in xcode. You will learn how to write code to print some text to the screen.</p>
 
 
-<h4>Exercises:</h4>
+<h4>Demo</h4>
+<p>#############################</p>
+
+<h4>Example</h4>
+<p>#############################</p>
+
+<h4>Exercises</h4>
 <ul>
 <li>Write a program that prints your name</li>
-<li>Write a program that prints you address on separate lines</li>
+<li>Write a program that prints your address on separate lines</li>
 <li>Comment out your address</li>
 </ul>
 
-<h4>Answers:</h4>
-<p><<Attach source code files for programs that solve the exercise questions. Make sure they are well commented>></p>
+<h4>Answers</h4>
+<p>#########################</p>
 
 </div>
 <div id="rightcolumn">
@@ -122,7 +124,7 @@
 
 </div>
 <div id="moveOn">
-    <p>Carry on the journey</p>
+    <p>Continue the journey</p>
 </div>
 <!--div class="footing"> -->
  <!--Copyright © The Solar Swiftem 2015 | <a href="/privacy_policy">Privacy Policy</a>  -->
