--- a/basics.html
+++ b/basics.html
@@ -101,7 +101,8 @@
 <p>#############################</p>
 
 <h4>Example</h4>
-<p>#############################</p>
+<p>Download a copy of the project from the demo by clicking on this link.</p>
+<a href="http://solarswiftem.com/examples/swift/lesson1" target="_blank">Download</a>
 
 <h4>Exercises</h4>
 <ul>
